@@ -53,7 +53,7 @@ session_debug = false
 # The host/port that memcached is running on if it is to be used.
 # If memcache is not available, an in memory dictionary will be
 # used instead.
-memcached_server = 127.0.0.1:11211
+# memcached_server = 127.0.0.1:11211
 
 # Where to store media files.
 # database - media files are base64 encoded in the dbfs.content db column
