@@ -1578,28 +1578,29 @@ class animal(JSONEndpoint):
         return {
             "animal": a,
             "activelitters": asm3.animal.get_active_litters_brief(dbo),
-            "additional": asm3.additional.get_additional_fields(dbo, a["ID"], "animal"),
+            "additional": asm3.additional.get_additional_fields(dbo, a.ID, "animal"),
             "animaltypes": asm3.lookups.get_animal_types(dbo),
-            "audit": self.checkb(asm3.users.VIEW_AUDIT_TRAIL) and asm3.audit.get_audit_for_link(dbo, "animal", a["ID"]) or [],
+            "audit": self.checkb(asm3.users.VIEW_AUDIT_TRAIL) and asm3.audit.get_audit_for_link(dbo, "animal", a.ID) or [],
             "species": asm3.lookups.get_species(dbo),
             "breeds": asm3.lookups.get_breeds_by_species(dbo),
             "coattypes": asm3.lookups.get_coattypes(dbo),
             "colours": asm3.lookups.get_basecolours(dbo),
             "deathreasons": asm3.lookups.get_deathreasons(dbo),
             "diarytasks": asm3.diary.get_animal_tasks(dbo),
+            "entryhistory": asm3.animal.get_animal_entries(dbo, a.ID),
             "entryreasons": asm3.lookups.get_entryreasons(dbo),
             "flags": asm3.lookups.get_animal_flags(dbo),
-            "incidents": asm3.animalcontrol.get_animalcontrol_for_animal(dbo, o.post.integer("id")),
+            "incidents": asm3.animalcontrol.get_animalcontrol_for_animal(dbo, a.ID),
             "internallocations": asm3.lookups.get_internal_locations(dbo, o.locationfilter, o.siteid),
             "jurisdictions": asm3.lookups.get_jurisdictions(dbo),
             "logtypes": asm3.lookups.get_log_types(dbo),
             "pickuplocations": asm3.lookups.get_pickup_locations(dbo),
-            "publishhistory": asm3.animal.get_publish_history(dbo, a["ID"]),
+            "publishhistory": asm3.animal.get_publish_history(dbo, a.ID),
             "posneg": asm3.lookups.get_posneg(dbo),
             "sexes": asm3.lookups.get_sexes(dbo),
             "sizes": asm3.lookups.get_sizes(dbo),
             "sharebutton": SHARE_BUTTON,
-            "tabcounts": asm3.animal.get_satellite_counts(dbo, a["ID"])[0],
+            "tabcounts": asm3.animal.get_satellite_counts(dbo, a.ID)[0],
             "templates": asm3.template.get_document_templates(dbo, "animal"),
             "templatesemail": asm3.template.get_document_templates(dbo, "email"),
             "ynun": asm3.lookups.get_ynun(dbo),
