@@ -314,6 +314,14 @@ $(function() {
                 '<label for="transferin">' + _("Transfer In") + '</label>',
                 '</td>',
                 '</tr>',
+                '<tr class="asilomar">',
+                '<td></td>',
+                '<td>',
+                '<input class="asm-checkbox" type="checkbox" id="asilomartransferexternal" data-json="ASILOMARISTRANSFEREXTERNAL" data-post="asilomartransferexternal" title=',
+                '"' + html.title("This animal was transferred in from outside the community/coalition") + '" />',
+                '<label for="asilomartransferexternal">' + "Outside community/coalition" + '</label>',
+                '</td>',
+                '</tr>',
                 '<tr id="pickeduprow">',
                 '<td></td>',
                 '<td>',
@@ -350,14 +358,6 @@ $(function() {
                 '<span class="asm-callout" id="callout-hold">' + _("Hold the animal until this date or blank to hold indefinitely") + '</span>',
                 '<input class="asm-halftextbox asm-datebox" id="holduntil" data-json="HOLDUNTILDATE" data-post="holduntil" />',
                 '</span>',
-                '</td>',
-                '</tr>',
-                '<tr class="asilomar">',
-                '<td></td>',
-                '<td>',
-                '<input class="asm-checkbox" type="checkbox" id="asilomartransferexternal" data-json="ASILOMARISTRANSFEREXTERNAL" data-post="asilomartransferexternal" title=',
-                '"' + html.title("This animal was transferred in from outside the community/coalition") + '" />',
-                '<label for="asilomartransferexternal">' + "Outside community/coalition" + '</label>',
                 '</td>',
                 '</tr>',
                 '<tr id="bondedwith1row">',
